# design-md

./: .gitignore  .gitmodules  CLAUDE.md  JARVIS.md  README.md  STATUS.json  pyproject.toml
design_md/: __init__.py  __main__.py  cache.py  catalog.py  cli.py  mcp_server.py  parser.py
scripts/: index_qdrant.py  test_qdrant_search.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_mcp_server.py  test_parser.py
tests/fixtures/: stripe_DESIGN.md
