[project]
name = "design-md"
version = "0.1.0"
description = "Wrapper OS-EMPIRE autour de VoltAgent/awesome-design-md — accès programmatique aux design systems de 58 sites"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
design-md = "design_md.cli:main"

[tool.setuptools.packages.find]
include = ["design_md*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "S", "A", "C4", "DTZ", "RUF"]
ignore = ["S603", "S607", "S108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N806", "RUF059"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
